crates/apollo-compiler/test_data/diagnostics/0043_undefined_union_member.txt
Error: cannot find type `Cat` in this document
    ╭─[ 0043_undefined_union_member.graphql:11:18 ]
    │
 11 │ union CatOrDog = Cat | Dog
    │                  ─┬─  
    │                   ╰─── not found in this scope
────╯

